[package]
name = "asana-sdk"
version = "0.1.0"
authors = ["Orian de Wit <okdewit@gmail.com>"]
license = "MIT"
keywords = ["asana", "sdk", "api"]
categories = ["api-bindings"]
description = "A Rust SDK for the Asana Rest API"
edition = "2018"

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.58"
reqwest = { version = "0.10.8", features = ["json"] }
log = "0.4.11"