[package]
name = "asana-sdk"
version = "0.1.1"
authors = ["Orian de Wit <okdewit@gmail.com>"]
license = "MIT"
keywords = ["asana", "sdk", "api"]
categories = ["api-bindings"]
description = "A Rust SDK for the Asana Rest API"
repository = "https://github.com/okdewit/asana-sdk/"
readme = "README.md"
edition = "2018"

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.58"
reqwest = { version = "0.10.8", features = ["json"] }
log = "0.4.11"